[package]
name = "block-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "../deps/concordium-rust-sdk"}
tokio = { version = "1.8.0", features = ["full"] }
tonic = "0.5"
serde_json = "1.0.60"
serde = {version = "1", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1.0"
structopt = "0.3"
clap = "2.33.3"
tonic-build = "0.5"
futures = "0.3"
csv = "1.1"
