[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
tui = "0.18"
crossterm = "0.23"
anyhow = "1.0.57"
structopt = "0.3"
clap = "2.33.3"