[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1.0"
structopt = "0.3"
clap = "2.33.3"
csv = "1.1"
chrono = {version = "0.4", features = ["serde"] }
serde_json = "1.0.60"
serde = {version = "1", features = ["derive"]}
matches = "0.1.9"
serde_derive = "1.0.137"
