[package]
name = "process-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1.0.57"
structopt = "0.3"
clap = "2.33.3"
sysinfo = "0.24.5"
csv = "1.1"
serde_json = "1.0.60"
serde = {version = "1", features = ["derive"]}
serde_derive = "1.0.137"
chrono = {version = "0.4", features = ["serde"] }